@@ -34,6 +34,7 @@
 struct GWEN_KEYSPEC {
   GWEN_INHERIT_ELEMENT(GWEN_KEYSPEC)
   GWEN_KEYSPEC *next;
+  int status;
   char *keyType;
   char *keyName;
   char *owner;
